--- a/ci/test.yml
+++ b/ci/test.yml
@@ -1,5 +1,24 @@
 image: registry.gitlab.com/satoshilabs/trezor/trezor-firmware/trezor-firmware-env.nix
 
+# HWI Test
+hwi trezor test:
+  stage: test
+  needs:
+    - core unix frozen debug build
+  script:
+    - git clone https://github.com/bitcoin-core/HWI.git
+    - cd HWI
+    - nix-shell --run "poetry install"
+    - nix-shell --run "./hwi.py enumerate"
+  artifacts:
+    name: "$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
+    paths:
+      - tests/junit.xml
+    reports:
+      junit: tests/junit.xml
+    expire_in: 1 week
+    when: always
+
 # Core
 
 core unit test:
